add k3s cluster and operator
